...
    header: YouTubeMusicCreatorHeader,
    offlineMode: Boolean,
    followFavorite: FavoritePlaylist?
) {
    val context = LocalContext.current
    ElevatedCard(
        modifier = Modifier.fillMaxWidth().testTag("youtubeCreatorTabletProfile"),
        shape = RoundedCornerShape(28.dp)
    ) {
        Box(
            modifier = Modifier.fillMaxWidth().aspectRatio(1.25f)
                .background(MaterialTheme.colorScheme.surfaceVariant),
            contentAlignment = Alignment.Center
...
